# BadTV

./: Cargo.toml  README.md
docs/plans/: 2026-03-05-badtv-design.md  2026-03-05-badtv-implementation.md  2026-03-06-sample-subcommand-design.md
src/: align.rs  audio.rs  fallback.rs  fetch.rs  main.rs  model.rs  search.rs  tui.rs
src/process/: compressor.rs  crossfade.rs  eq.rs  limiter.rs  mod.rs  normalize.rs  pitch.rs  reverb.rs
