[package]
name = "badtv"
version = "0.1.0"
edition = "2021"
description = "Stitch TV news clips into infomercial-style audio collages"
license = "MIT"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
hound = "3"
indicatif = "0.17"
pitch_shift = "1"
ratatui = "0.29"
crossterm = "0.28"
reqwest = { version = "0.12", features = ["json"] }
rodio = "0.20"
rubato = "0.16"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
symphonia = { version = "0.5", features = ["mp3"] }
tokio = { version = "1", features = ["full"] }
tts = "0.26"
whisper-rs = "0.15"
urlencoding = "2"
dirs = "6"
rand = "0.9"
tempfile = "3"
futures = "0.3.32"
whisper-rs-sys = "0.14"

[dev-dependencies]
wiremock = "0.6"
